sdk_tests/tests/pbc_contract_codegen/fail/zk/missing_zk_state_zk_on_secret_input.stderr
error: custom attribute panicked
  --> tests/pbc_contract_codegen/fail/zk/missing_zk_state_zk_on_secret_input.rs:14:1
   |
14 | #[zk_on_secret_input(shortname = 0x04)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: Functions annotated with this macro must have at least 3 arguments, but had only 2
